# nutramap

./: .env.example  .env.production  .gitignore  DEBUGGING_TRIAL_ERROR.md  DEPLOYMENT.md  PAGES_SEPARATION.md  QUICK_TEST.md  README.md  RESTART_BACKEND.md  TESTING_NOW.md  TRIAL_BEHAVIOR_EXAMPLES.md  TRIAL_USER_STATE.md  TRIAL_USER_TESTING.md  alembic.ini  compose.dev.yaml  compose.yaml  deploy.sh  environment.yml  food_ids.pkl  imports.py  install_reqs.sh  main.py  more_responsive.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run-mcp.sh  start_back.sh  start_front.sh  writeup.md
backend/: .env.example  .env.local  Dockerfile  GPU_ACCELERATION.md  MODAL_DEPLOYMENT.md  RECIPE_SYSTEM_SPEC.md  TRIAL_USER_SETUP.md  deploy-modal.sh  environment.yml  food_ids.pkl  main.py  nutrient_ids.pkl  pyproject.toml  test_decomposition.py  test_search.py
backend/databases/: food_data_connect.py  food_data_load.py  food_data_postgres_connect.py  food_models.py  load_food_data.py  main_connection.py  user_data_connect.py  user_models_mongo.py
backend/routers/: auth.py  auth_cookie.py  food_data.py  foods.py  logs.py  nutrients.py  requirements.py  user_data.py  users.py
backend/src/databases/: cleanup_and_embed_nutrients.py  create_embeddings.py  food_data_load.py  food_models.py  load_USDA_data.py  load_food_data.py  main_connection.py  mongo.py  mongo_data_connect.py  mongo_models.py  user_models_mongo.py
backend/src/routers/: ai.py  auth.py  dense.py  dense_og.py  foods.py  logs.py  match.py  match_old.py  nutrients.py  parallel.py  parse.py  parse_food.py  recipes.py  requirements.py  sparse.py  sparse2.py  sparse_bad.py  sparse_search_nutrients.py  trial_user.py  users.py
backend/templates/: dashboard.html  home.html  register.html
backend/tests/: test_add_custom_food_embedding.py  test_incremental_faiss.py  test_log_custom_food_nutrients.py  test_nutrition_transcription_accuracy.py  test_top_foods.py
(+179 files in other folders)
