[project]
name = "foodpanel"
version = "0.1.0"
description = "Shared client and CLI for the Foodpanel API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]

[project.scripts]
foodpanel = "foodpanel.cli:main"
foodPanel = "foodpanel.cli:main"
foodpanel-mcp = "foodpanel_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foodpanel", "foodpanel_mcp"]
